src/sass/pages/_home.scss
@use '../abstracts' as *;

.hero--home {
  background-color: var(--black);
  background-image: url(/assets/img/grunge-white.png);
  padding-top: 10rem;
  padding-bottom: 4rem;
  position: relative;

  @include min(lg) {
    padding-top: 15rem;
  }

  .hero__wrapper {
    position: relative;
    grid-auto-rows: auto;
    flex-direction: column-reverse;

    @include min(lg) {
      align-items: center;
      justify-content: center;
      margin-bottom: var(--space-3xl);
      min-height: 90vh;
    }
  }

  .hero__text {
    position: relative;
    z-index: 1;
    grid-column-start: 1;
    grid-column-end: -1;
    grid-row: 2;
    padding: var(--space-s);
    background-color: var(--black);
    margin-top: calc(var(--space-2xl) * -1);
    // margin-left: var(--space-l);
    // margin-right: var(--space-l);

    @include min(lg) {
      grid-column-start: 1;
      grid-column-end: -1;
      grid-row-start: 1;
      margin-top: 0;
      background-color: transparent;
    }

    h1 {
      margin-bottom: var(--space-s-l);
      // font-size: 3.12rem;
      font-size: var(--space-xl-3xl);

      @include min(lg) {
        // margin-bottom: var(--space-l);
        // font-size: 6rem;
      }

      span {
        display: inline-block;
        background-color: var(--black);
        padding: 0 .25em .1em;
      }
    }

  }

  .hero__video {
    grid-column-start: 1;
    grid-column-end: -1;
    grid-row: 1;

    @include min(lg) {
      grid-column-start: 4;
      grid-column-end: -1;
      grid-row-start: 1;
      height: 100%;
      width: 100%;
    }

    video {
      width: 100%;
      height: auto;

      @include min(lg) {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }
  }

  .neon {
    position: absolute;
    bottom: 0;
    right: var(--space-s-l);
    z-index: 3;
    transform: translateY(50%);
    // filter: drop-shadow(0 0 .5rem var(--red));
    width: 10rem;
    height: auto;

    @include min(lg) {
      width: 20rem;
    }
  }
}

